# brownfield-cartographer

./: .gitignore  README.md  TRP 1 Challenge Week 4_ The Brownfield Cartographer.md  pyproject.toml
.cartography/: CODEBASE.md  incremental_state.json  lineage_graph.json  module_graph.json  onboarding_brief.md
.cartography/semantic_index/: day_one_answers.json  domains.json  modules.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/001-brownfield-cartographer/: plan.md  spec.md  tasks.md
specs/001-brownfield-cartographer/checklists/: requirements.md
src/: cli.py  ignore_rules.py  orchestrator.py  repo_resolver.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: airflow_dag_parser.py  dag_config_parser.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: knowledge_graph.py
src/models/: __init__.py  edges.py  evidence.py  graphs.py  nodes.py
tests/fixtures/: sample_dag.py
web/: README.md  package-lock.json  package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/app/api/analyze/run/: route.ts
web/src/app/api/graph/[agent]/: route.ts
web/src/app/api/query/run/: route.ts
web/src/lib/: cartography.ts
